# clawdesk

./: .env.example  .env.mock.example  .env.production.example  .gitattributes  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  ClawDesk 擺脫 Lemon Squeezy 後的商業化與跨平台授權路線研究.docx  LICENSE  PUBLIC_RELEASE_BLOCKERS.md  PUBLIC_RELEASE_CHECKLIST.md  README.md  ROADMAP.md  SECURITY.md  TEST_LOG.md  docker-compose.backend-sim.yml  docker-compose.mock-gateway.full.yml  docker-compose.mock-gateway.yml  docker-compose.production-gateway.proxy.yml  docker-compose.production-gateway.yml  index.html  package-lock.json  package.json  vite.config.ts  vitest.config.ts
.github/: pull_request_template.md
backend/: .env.example  README.md  adapters.test.mjs  contracts.mjs  contracts.test.mjs  production-gateway-sim.mjs  server.mjs
docs/: OPENAI_TRIAL_REQUEST.md  README.md  agent-bridge.md  architecture.md  backend-architecture-simulated-deploy.md  codex-for-oss-application.md  feature-map.md  maintenance.md  mvp.md  public-oss-evidence.md  release-process.md  roadmap-issues.md  security-model.md  target-orchestration.md  transport.md  troubleshooting.md
infra/: nginx.mock.conf  nginx.production-gateway.conf
scripts/: audit-i18n-literals.mjs  audit-scheduled-tasks.ps1  auto-beta-release-win.mjs  beta-direct-env-doctor.mjs  build-macos.mjs  (+51 more)
src-tauri/: Cargo.toml  build.rs  tauri.conf.json  tauri.macos.conf.json  tauri.microsoftstore.conf.json  tauri.prod.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
(+154 files in other folders)
