[package]
name = "openclaw-desktop"
version = "0.1.0"
description = "ClawDesk OpenClaw-compatible GUI desktop MVP"
authors = ["ClawDesk Contributors"]
edition = "2021"

[lib]
name = "openclaw_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
rfd = "0.15"
ureq = { version = "2", features = ["json"] }

[profile.release]
codegen-units = 1
lto = true
opt-level = 3
panic = "abort"
strip = true
