[package]
name = "clawdesk-desktop"
version = "0.1.0"
license = "SEE LICENSE IN LICENSE"
description = "ClawDesk desktop AI workspace MVP"
authors = ["ClawDesk Contributors"]
edition = "2021"

[lib]
name = "clawdesk_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
rfd = "0.15"
ureq = { version = "2", features = ["json"] }

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = ["Win32_Foundation", "Win32_Security_Cryptography"] }

[profile.release]
codegen-units = 1
lto = true
opt-level = 3
panic = "abort"
strip = true
